--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <%= flash.each do |key, message|%>
+      <div class="alert alert-<%= key == 'notice'? 'success' : 'danger' %> alert-dissmissible fade show text-center" role="alert">
+        <%= message %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+      </div>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
