--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -3,6 +3,24 @@
 <div class="row">
 	<div class="col-md-12">
 		<%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded text-light", local: true) do |f| %>
+			.
+			<% if @article.errors.any? %>
+				<div class="card card-danger col-md-offset-1">
+					<div class="card-heading">
+						<h2 class="card-title">
+							<%= pluralize(@article.errors.count, "error") %> stopped this article from being saved:
+						</h2>
+						<div class="card-body">
+							<ul>
+								<% @article.errors.full_messages.each do |msg| %>
+									<li><%= msg %></li>
+								<% end %>
+							</ul>
+						</div>
+					</div>
+				</div>
+			<% end %>
+			
 			<div class="form-group">
 				<div class="control-label col-md-2">
 					<%= f.label :title %>
@@ -12,7 +30,7 @@
 							placeholder: "Title of Article", autofocus: true %>
 				</div>
 			</div>
-			
+
 			<div class="form-group">
 				<div class="control-label col-md-2">
 					<%= f.label :body %>
