--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -5,12 +5,13 @@
 		<%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded text-light", local: true) do |f| %>
 			.
 			<% if @article.errors.any? %>
-				<div class="card card-danger col-md-offset-1">
-					<div class="card-heading">
+				<div class="card border-danger col-md-offset-1">
+					<div class="card-body text-danger">
 						<h2 class="card-title">
-							<%= pluralize(@article.errors.count, "error") %> stopped this article from being saved:
+							<%= pluralize(@article.errors.count, "error") %>
+							stopped this article from being saved:
 						</h2>
-						<div class="card-body">
+						<div class="card-text">
 							<ul>
 								<% @article.errors.full_messages.each do |msg| %>
 									<li><%= msg %></li>
