--- a/app/views/shared/_error.html.erb
+++ b/app/views/shared/_error.html.erb
@@ -1,6 +1,8 @@
-<%= flash.each do |key, message|%>
-	<div class="alert alert-<%= key == 'notice'? 'success' : 'danger' %> alert-dissmissible fade show text-center" role="alert">
-		<%= message %>
-		<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-	</div>
-<% end %>
+<%# if obj.errors.any? %>
+	<%= flash.each do |key, message|%>
+		<div class="alert alert-<%= key == 'notice'? 'success' : 'danger' %> alert-dissmissible fade show text-center" role="alert">
+			<%= message %>
+			<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+		</div>
+	<% end %>
+<%# end %>
