--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md">
 	<%= link_to "BLOG", root_path, class: "navbar-brand", id: "logo" %>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" 
 		data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
