--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -6,6 +6,9 @@ body {
 	color: #64103F
 }
 
+// a:active {text-decoration: none;}
+// a:hover {text-decoration: none;}
+
 // Navbar styling
 .navbar {
 	background: #64103F;
@@ -47,3 +50,33 @@ body {
  .page-heading, div > label {
 	 color: #64103F;
  }
+
+ // Listing articles styling
+
+.article-title {
+  font-weight: bold;
+  font-size: 2.5em;
+  margin-bottom: 0.8em;
+  padding-left: 0.7em;
+}
+
+.article-body {
+  font-size: 1.5em;
+  padding-left: 1.2em;
+  color: #64103F;
+}
+
+.author {
+  color: #64103F;
+  padding-left: 25px;
+}
+
+// .article-title {
+//
+// }
+
+.article-detail {
+  margin-top: 20px;
+  color: #0000ff;
+}
+
