--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
 			<%= link_to article.title, @article %>
 		</div>
 		<div class="article-body">
-			<%= article.body %>
+			<%= truncate(article.body, length: 500) %>
 		</div>
 	</div>
 <% end %>
