--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,13 +2,18 @@
 
 <%= link_to "New Article", new_article_path, class: "btn btn-default btn-lg", id: "new-article-button" %>
 
-<% @articles.each do |article| %>
-	<div class="card">
-		<div class="article-title">
-			<%= link_to article.title, @article %>
+
+<% if @articles.empty? %>
+	<h1 id="no-articles">No Articles Created</h1>
+<% else %>
+	<% @articles.each do |article| %>
+		<div class="card">
+			<div class="article-title">
+				<%= link_to article.title, @article %>
+			</div>
+			<div class="article-body">
+				<%= truncate(article.body, length: 500) %>
+			</div>
 		</div>
-		<div class="article-body">
-			<%= truncate(article.body, length: 500) %>
-		</div>
-	</div>
+	<% end %>
 <% end %>
